@@ -7,7 +7,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,6 +21,6 @@ public class FindJobCodeService {
                         .keyword(c.getKeyword())
                         .jobType(c.getJobType())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 }
