@@ -1,9 +1,7 @@
 package com.example.jobis.domain.teacher.service;
 
-import com.example.jobis.domain.recruit.domain.RecruitArea;
 import com.example.jobis.domain.recruit.domain.enums.RecruitStatus;
 import com.example.jobis.domain.recruit.domain.repository.RecruitmentRepository;
-import com.example.jobis.domain.recruit.facade.RecruitFacade;
 import com.example.jobis.domain.teacher.presentaion.dto.response.TQueryRecruitmentListResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -11,8 +9,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
 import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -36,6 +32,6 @@ public class TeacherQueryRecruitmentListService {
                                 .recruitmentCount(r.getTotalHiring())
                                 .recruitmentJob(r.getRecruitAreaList())
                                 .build()
-                ).collect(Collectors.toList());
+                ).toList();
     }
 }
